[package]
name = "markdown-dashboard"
version = "0.1.0"
authors = ["Henri Bourcereau <hbourcereau@atixnet.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
nom = "5.1.0"
yaml-rust = "0.4.3"
chrono = "0.4.10"
